# rust-workspace-template

./: .clippy.toml  .rustfmt.toml  Cargo.toml  cspell.yml  readme.md
.cargo/: config.toml
crates/example_member/: Cargo.toml
crates/example_member/src/: lib.rs
docs/: dev-setup.md  development-stages.md  project-layout.md  software-quality.md
